--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "xbt-lumina",
-  "version": "1.0.1",
+  "name": "lumina.js",
+  "version": "1.0.2",
   "description": "lumina js",
   "license": "MIT",
   "main": "",
