--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "lumina.js",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "lumina js",
   "license": "MIT",
   "main": "",
   "repository": "git://github.com/xbhub/lumina.js",
   "homepage": "https://github.com/xbhub/lumina.js",
-  "bugs": "https://github.com/xbhub/lumina/issues",
+  "bugs": "https://github.com/xbhub/lumina.js/issues",
   "author": {
     "name": "jory",
     "email": "jorycn@163.com"
