--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@babel/preset-react": "^7.0.0-beta.40",
     "@babel/preset-stage-0": "^7.0.0",
     "@vue/babel-preset-jsx": "^1.2.4",
-    "axios": "^0.18",
+    "axios": ">=0.21.1",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-react-transform": "^3.0.0",
